--- a/www/erupe/charsel.html
+++ b/www/erupe/charsel.html
@@ -2,17 +2,17 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<!-- To dev i recommand to enable this
-		<meta http-equiv='expires' content='0'>
+		<!-- Dev section -->
+		<!--meta http-equiv='expires' content='0'>
 		<meta http-equiv='pragma' content='no-cache'>
-		<meta http-equiv='cache-control' content='no-cache'>-->
-		<!-- Disable it if you Dev -->
-		<!-- 7 Days (604800 seconds)-->
+		<meta http-equiv='cache-control' content='no-cache'-->
+		<!-- Enable above+Disable below -->
 		<meta http-equiv='cache-control' content='max-age=604800, stale-while-revalidate=604800'>
+		<!-- End dev section -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 		<title>MHFZZ launcher</title>
 		<link rel="stylesheet" href="css/dependencies/bootstrap.min.css">
-		<link rel="stylesheet" href="css/charsel.css">		
+		<link rel="stylesheet" href="css/charsel.css">
 		<script type="text/javascript" src="js/dependencies/jquery-3.5.1.min.js"></script>
 		<script type="text/javascript" src="js/dependencies/bootstrap.bundle.min.js"></script>
 		<script type="text/javascript" src="js/utilities/audio.js"></script>
@@ -30,7 +30,7 @@
 				<div class="col-12" style="height: 100%;">
 					<button id="bt_delete_char" class="btn btn-primary" onclick="CUE_Selected();" onmouseover="CUE_Cursor()">Delete</button>
 					<button id="bt_new_char" class="btn btn-primary" onclick="CUE_Selected()" onmouseover="CUE_Cursor()">Add New Character</button>
-					<button id="bt_confirm" class="btn btn-primary" onclick="CUE_Starting();" onmouseover="CUE_Cursor()">START</button>
+					<button id="bt_confirm" class="btn btn-primary" onclick="CUE_Starting();" onmouseover="CUE_Cursor()">Launch</button>
 				</div>
 			</div>
 			<button id="bt_up_char_list" class="btn btn-primary" onclick="CUE_Selected();" onmouseover="CUE_Cursor()"></button>
