--- a/www/erupe/login.html
+++ b/www/erupe/login.html
@@ -2,16 +2,16 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<!-- To dev i recommand to enable this -->
-		<meta http-equiv='expires' content='0'>
+		<!-- Dev section -->
+		<!--meta http-equiv='expires' content='0'>
 		<meta http-equiv='pragma' content='no-cache'>
-		<meta http-equiv='cache-control' content='no-cache'>
-		<!-- Disable it if you Dev -->
-		<!-- 7 Days (604800 seconds)-->
-		<!--<meta http-equiv='cache-control' content='max-age=604800, stale-while-revalidate=604800'>-->
+		<meta http-equiv='cache-control' content='no-cache'-->
+		<!-- Enable above+Disable below -->
+		<meta http-equiv='cache-control' content='max-age=604800, stale-while-revalidate=604800'>
+		<!-- End dev section -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<link rel="stylesheet" href="css/dependencies/bootstrap.min.css">
-		<link rel="stylesheet" href="css/login.css">		
+		<link rel="stylesheet" href="css/login.css">
 		<script type="text/javascript" src="js/dependencies/jquery-3.5.1.min.js"></script>
 		<script type="text/javascript" src="js/dependencies/bootstrap.bundle.min.js"></script>
 		<script type="text/javascript" src="js/login.js"></script>
@@ -34,20 +34,20 @@
 							</div>
 							<h5 class="mb-1" style="font-size: 16px;color: White; position: relative; left: 5px;" ><b>Server Selection</b></h5>
 							<div class="form-group">
-								<input type="text" class="form-control" id="ServerName" placeholder="Erupe Server 1" readonly>
+								<input type="text" class="form-control" id="ServerName" value="Erupe" readonly>
 							</div>
-							<button id="submitButton" type="submit" class="btn btn-primary" onclick="CUE_Confirm();" onmouseover="CUE_Cursor()">CONNECT</button>
+							<button id="submitButton" type="submit" class="btn btn-primary" onclick="CUE_Confirm();" onmouseover="CUE_Cursor()">Log In</button>
 						</form>
 						<div id="CheckBoxSaveUser" >
-							<input type="checkbox" id="saveAccount" name="saveAccount" style=" position: relative; left: 12px; cursor: pointer;">
-							<label for="scales" style=" position: relative; left: 25px; bottom: 1.58px; cursor: pointer;">Save Account</label>
+							<input type="checkbox" id="saveAccount" name="saveAccount" style=" position: relative; left: 5px; cursor: pointer;">
+							<label for="scales" style=" position: relative; left: 5px; bottom: 1.58px; cursor: pointer;">Save Login Details</label>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div id="Block" style="display: none;">
-			<img src="ressources/load.gif" style="width: 32px;position: absolute;left: 190px;top: 125px;">
+			<img src="resources/load.gif" style="width: 32px;position: absolute;left: 190px;top: 125px;">
 		</div>
 	</body>
 	<script type="text/javascript" src="js/utilities/saveaccount.js"></script>
