--- a/www/erupe/index.html
+++ b/www/erupe/index.html
@@ -1,68 +1,69 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<!-- Dev section -->
-		<!--meta http-equiv='expires' content='0'>
-		<meta http-equiv='pragma' content='no-cache'>
-		<meta http-equiv='cache-control' content='no-cache'-->
-		<!-- Enable above+Disable below -->
-		<meta http-equiv='cache-control' content='max-age=604800, stale-while-revalidate=604800'>
-		<!-- End dev section -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<!-- Load all Scripts CSS -->
-		<link rel="stylesheet" href="css/dependencies/bootstrap.min.css">
-		<link rel="stylesheet" href="css/main.css">
-		<!-- Load all Scripts JS -->
-		<script type="text/javascript" src="js/dependencies/jquery-3.5.1.min.js"></script>
-		<script type="text/javascript" src="js/dependencies/bootstrap.bundle.min.js"></script>
-		<script type="text/javascript" src="js/dependencies/preloadjs.min.js"></script>
-		<script type="text/javascript" src="js/utilities/preload.js"></script>
-		<script type="text/javascript" src="js/main.js"></script>
-		<script type="text/javascript" src="js/utilities/audio.js"></script>
-	</head>
-	<body>
-		<div id="main_titlebar">
-			<div id="main_logo" class='left'>
-			<p id="main_titlebar_background"></p>
-			<div id="main_version">
-				<p style="font-weight: bold; font-size:15px; margin: auto;">Monster Hunter</p>
-				<p style="font-weight: bold;font-size:15px;margin: auto;position:relative;bottom: 4px;">Frontier Z Launcher </p>
-				<p style="position:relative;bottom: 4px;margin: auto;">release ver. 2.016 (Erupe)</p>
-			</div>
-			<img id="main_small_icon" src="resources/icons/ico_title.png">
-			<img id="main_logo_full" src="resources/logo.png">
-			</div>
-			<div class="right">
-				<a id="main_exit" class="nav-link" href="#" onclick="CUE_Selected()" onmouseover="CUE_Cursor()">✕</a>
-			</div>
-			<div class="right">
-				<a id="main_reduce" class="nav-link" href="#" onclick="CUE_Selected()" onmouseover="CUE_Cursor()">＿</a>
-			</div>
-		</div>
-		<div class="container-fluid" style="height: 47%!important;width: 51.8%;">
-			<div class="row no-gutters h-100">
-				<div id="main_parent" class="col-12"></div>
-			</div>
-		</div>
-		<div class="container-fluid px-0 h-25">
-			<div class="row no-gutters h-100">
-				<div class="col-12">
-				<div class="col-1" style="max-width: 3.5%;"></div>
-					<div id="main_box_dialog">
-						<div id="main_box_parent">
-							<div id="main_box_alert"></div>
-						</div>
-					</div>
-					<div id="main_config">
-						<button id="main_config_button" class="btn btn-secondary" onclick="CUE_Selected()" onmouseover="CUE_Cursor()"></button>
-					</div>
-				</div>
-			</div>
-		</div>
-		<footer id="main_footer"></footer>
-		<div id="main_start_now" style="display: none;z-index: 1000;">
-			<p style="z-index: 1001;width: 96.9%;height: 100%;background-image: url(./resources/start_now.png);background-position: center;background-repeat: no-repeat;"></p>
-		</div>
-	</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Monster Hunter Frontier Z Launcher</title>
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <div id="main">
+      <div class="grabbable" unselectable="on" onselectstart="window.external.beginDrag(true); return false;"></div>
+      <div id="game_starting"></div>
+      <div id="window_controls"><div class="grabbable"></div>
+        <div class="unselectable button_min" onclick="window.external.minimizeWindow()" onmouseover="soundSel()">__</div>
+        <div class="unselectable button_close" onclick="window.external.closeWindow()" onmouseover="soundSel()">✕</div>
+      </div>
+      <div id="header"><div class="grabbable"></div>
+        <p class="background"></p>
+        <p class="title1">Monster Hunter</p>
+        <p class="title2">Frontier Z Launcher</p>
+        <p class="ver">release ver. 2.017 (Erupe)</p>
+        <img src="img/logo.png" width="303" height="114">
+      </div>
+      <div id="login">
+        <div id="processing"><p>Authenticating...</p></div>
+        <div class="login_form">
+          <form id="login_form" onsubmit="event.preventDefault();doLogin()">
+            <label for="username" class="unselectable label_username">Erupe ID</label>
+            <input type="text" id="username" placeholder="Username" onkeyup="soundSel()" onmouseover="soundSel()">
+            <label for="password" class="unselectable label_password">Password</label>
+            <input type="password" id="password" placeholder="Password" onkeyup="soundSel()" onmouseover="soundSel()">
+            <label for="server" class="label_server">Server</label>
+            <input type="text" id="server" value="Erupe" readonly>
+            <input type="submit">
+          </form>
+        </div>
+        <div class="unselectable login_button" onmouseenter="soundSel()" onclick="doLogin()"><span class="unselectable">Log In</span></div>
+        <div class="unselectable login_save"><input type="checkbox" id="login_save"><span id="login_save_text"> Remember Login</span></div>
+      </div>
+      <div id="char_select">
+        <div id="units"></div>
+        <div class="weapon_text">Current Weapon</div>
+        <div class="scroll up" onmouseover="soundSel()" onclick="soundOk();charselScrollUp()"></div>
+        <div class="scroll down" onmouseover="soundSel()" onclick="soundOk();charselScrollDown()"></div>
+        <div class="auto_login" onclick="autoWarning()"><input type="checkbox" id="auto_box"><span id="auto_text"> Auto-Login</span></div>
+        <div class="button_add" onmouseenter="soundSel()" onclick="soundOk();charselAdd()"><span class="unselectable">Add Character</span></div>
+        <div class="button_del" onmouseenter="soundSel()" onclick="soundOk();charselDel()"><span class="unselectable">Delete Character</span></div>
+        <div class="button_log" onmouseenter="soundSel()" onclick="soundOk();charselLog()"><span class="unselectable">Log Out</span></div>
+        <div class="button_start" onmouseenter="soundSel()" onclick="soundLogin();launch()"><span class="unselectable">Launch</span></div>
+      </div>
+      <div class="unselectable" id="log_outer">
+        <div class="log_inner">
+          <p id="log_p"></p>
+        </div>
+      </div>
+      <div class="unselectable" id="button_config" onclick="soundOk();window.external.openMhlConfig()" onmouseover="soundSel()"></div>
+      <div id="footer">
+        <div class="link" onclick="window.external.openBrowser('https://github.com/sekaiwish/Erupe')"><img src="img/icons/github.png"></div>
+      </div>
+      <div class="unselectable" id="dev">
+        <form action="javascript:void(0);">
+          <input type="text" id="console">
+          <input type="submit" value="eval()" onclick="doEval()">
+        </form>
+      </div>
+    </div>
+    <script src="js/script.js"></script>
+  </body>
 </html>
